--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -12,4 +14,10 @@ html {
 
 body {
 	box-sizing: border-box;
+	font-family: 'Lato', sans-serif;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
 }
