--- a/client/styles.css
+++ b/client/styles.css
@@ -21,3 +21,22 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
+table {
+	border-collapse: collapse;
+}
+
+table, th {
+	border: 1px solid #D4E2F2;
+}
+
+th {
+	padding: 2rem;
+	text-align: left;
+	font-size: 1.8rem;
+}
+
+td {
+	padding: 1.5rem 2rem;
+	font-size: 1.6rem;
+}
